# RastertoSVG

./: .gitignore  ADDITIONAL_FEATURES.md  AUDIT_REPORT.md  CHANGES_SUMMARY.md  FINAL_CONVERSION_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  FIXES_APPLIED.md  How Raster-to-Vector Conversion Works  Algorithms and ML Models.md  IMPROVEMENT_PLAN.md  PHASES.md  PROJECT_COMPLETION_REPORT.md  README.md  UserPersonas.md  agent.md  deep-research-report.md  docker-compose.yml  phase-0-foundation.md  phase-1-cli-core.md  phase-2-preprocessing.md  phase-3-api-backend.md  phase-4-frontend.md  phase-5-quality-modes.md
backend/: .env.example  .env.production  Dockerfile  Dockerfile.worker  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
backend/app/: __init__.py  cli.py  cli_enhanced.py  config.py  database.py  main.py
backend/app/api/: admin_routes.py  advanced_models.py  advanced_routes.py  ai_models.py  ai_routes.py  auth_middleware.py  auth_routes.py  billing_routes.py  dashboard_routes.py  export_routes.py  generative_routes.py  models.py  plugin_routes.py  routes.py  websocket_routes.py
backend/app/models/: __init__.py  billing.py  database.py
backend/app/services/: __init__.py  ai_engine.py  ai_preprocessing.py  auth_service.py  batch_template_service.py  billing_service.py  cloud_storage.py  converter.py  diffvg_optimizer.py  edge_detector.py  file_manager.py  format_exporters.py  job_tracker.py  line_smoother.py  marketplace.py  ml_converter.py  onnx_enhancer.py  optimizer.py  pattern_generator.py  plugin_sdk.py  potrace_engine.py  preprocessing_pipeline.py  preprocessor.py  quality_analyzer.py  sam_vectorizer.py  smart_engine_selector.py  svg_animator.py  svg_enhancer.py  text_to_svg.py  vtracer_engine.py  webhook_service.py
backend/tests/: test_api.py  test_cli.py  test_converter.py  test_file_manager.py  test_job_tracker.py  test_ml_converter.py  test_potrace.py  test_preprocessor.py  test_vtracer.py
docs/: API.md  CLI.md  (+10 more)
(+60 files in other folders)
